# differenzler

./: .gitignore  README.md  pyproject.toml  run.bat
config/: default.yaml
docs/: GAME_RULES.md  PROJECT.md  UI.md
game/: __init__.py  cards.py  constants.py  deck.py  legal.py  scoring.py  state.py  tricks.py
players/: __init__.py  base.py  factory.py  heuristic.py  heuristic_player.py  observation.py  random_player.py
runner/: __init__.py  match.py  simulate.py  stats.py
tests/game/: test_cards.py  test_deck.py  test_legal.py  test_random_sim.py  test_scoring.py  test_state.py  test_tricks.py
tests/players/: test_heuristic.py
tests/runner/: test_match.py  test_simulation.py
tests/ui/: test_layout.py  test_prediction_dialog.py  test_round_summary_dialog.py  test_session.py
ui/: __init__.py  assets.py  layout.py  prediction_dialog.py  pygame_app.py  round_summary_dialog.py  session.py
